# decentral-voucher-system-core

./: .gitignore  Cargo.toml  README.md  output.txt  sign_standards.sh  sign_test_standards.sh  update-docs.sh  validate_standards.sh
.dev/: ai_agent_instructions.md  design_decisions.md  llm-context.md
docs/de/: konliktmanagement.md  standard-konzepte.md  zustands-management.md
examples/: playground.rs  playground_crypto_utils.rs  playground_utils.rs  playground_voucher_lifecycle.rs  playground_wallet.rs
src/: error.rs  lib.rs  main.rs  test_utils.rs  wallet.rs
src/app_service/: app_queries.rs  app_signature_handler.rs  command_handler.rs  conflict_handler.rs  data_encryption.rs  lifecycle.rs  mod.rs  queries.rs  (+1 more)
tests/: architecture_tests.rs  core_logic_tests.rs  gtest_archive.rs  mod.rs  persistence_tests.rs  services_tests.rs  test_advanced_validation.rs  test_app_service.rs  test_archive.rs  test_crypto_utils.rs  test_date_utils.rs  test_file_storage.rs  test_forward_compatibility.rs  test_local_double_spend_detection.rs  test_local_instance_id.rs  test_mnemonic.rs  test_profile_management.rs  test_secure_container.rs  test_security_vulnerabilities.rs  test_standard_validation.rs  test_transaction_math.rs  test_utils.rs  test_voucher_integrity.rs  test_voucher_lifecycle.rs  test_voucher_validation.rs  test_wallet_integration.rs  test_wallet_signatures.rs  validation_tests.rs  wallet_api_tests.rs
voucher_standards/: minuto_standard.json  minuto_standard.toml  readme_de.md  silver_standard.json  silver_standard.toml  standard_template.toml
(+69 files in other folders)
