[package]
name = "voucher_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = { version = "2.1.0", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = "2.1" # Use a recent version
x25519-dalek = "2.0" # Use a recent version
rand_core = "0.6.4"
# x25519-dalek = { version = "2.0.0", features = ["static-secrets"] }
hex = "0.4.3"
bs58 = "0.5"
hmac = "0.12"
pbkdf2 = "0.12"
hkdf = "0.12"
chrono = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lib]
name = "voucher_lib"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.8"
voucher_lib = { version = "0.1.0", path = "." }
regex = "1" 

[[example]]
name = "playground_crypto_utils"
path = "examples/playground_crypto_utils.rs"

[[example]]
name = "playground_utils"
path = "examples/playground_utils.rs"
